--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,3 +1,3 @@
-<div class="py-10 bg-gray-900 dark:bg-gray-100 text-gray-100 dark:text-gray-900 text-center">
-  About, Contact, Social Links, Etc
+<div class="py-20 bg-gray-900 dark:bg-gray-100 text-gray-100 dark:text-gray-900 text-center">
+  Footer
 </div>
