Dynamic site title

--- a/src/_includes/partials/nav.html
+++ b/src/_includes/partials/nav.html
@@ -1,6 +1,6 @@
 <div class="flex justify-between p-5 bg-gray-900 dark:bg-gray-100 text-gray-100 dark:text-gray-900">
   <div class="text-2xl font-serif text-purple-200 dark:text-purple-800">
-    <a href="/" class="hover:text-white dark:hover:text-black">Blade</a>
+    <a href="/" class="hover:text-white dark:hover:text-black">{{ navigation.title }}</a>
   </div>
   <div class="flex flex-row">
     {% for item in navigation.items %}
